--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   ],
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
+    "example": "scripts/run-example.sh",
     "clean": "rm -rf ./lib/",
     "lint": "eslint ./src/ --fix",
-    "prepare": "husky install",
     "semantic-release": "semantic-release",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
@@ -39,7 +39,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -50,5 +49,8 @@
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix"
+  },
+  "dependencies": {
+    "temp-file": "^3.4.0"
   }
 }
