--- a/tsconfig.examples.json
+++ b/tsconfig.examples.json
@@ -10,11 +10,11 @@
     "allowJs": true /* Allow javascript files to be compiled. */,
     // "checkJs": true,                             /* Report errors in .js files. */
     // "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
-    "declaration": true /* Generates corresponding '.d.ts' file. */,
+    "declaration": false /* Generates corresponding '.d.ts' file. */,
     // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
-    "outFile": "./dist/index.js" /* Concatenate and emit output to single file. */,
-    "outDir": "./lib" /* Redirect output structure to the directory. */,
+    // "outFile": "./",                             /* Concatenate and emit output to single file. */
+    "outDir": "./examples" /* Redirect output structure to the directory. */,
     // "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
@@ -68,5 +68,6 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.[tj]s"]
+  "include": ["examples/**/*.ts"],
+  "exclude": ["src/**/*.ts", "test/**/*.ts"]
 }
