--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "*.ts": "eslint --cache --cache-location .eslintcache --fix"
   },
   "dependencies": {
+    "@types/ndarray": "^1.0.11",
     "temp-file": "^3.4.0"
   }
 }
